# my-unicorn

./: .gitignore  .profile  AGENTS.md  CHANGELOG.md  README.md  README.tr.md  SHA256SUMS.txt  TODO.md  choice_save_testing.py  choices.json  etcher.json  flowchart.xopp  icon_paths.yaml  install.sh  joplin.json  latest-linux.yml  main.py  my-unicorn-installer.sh  nuclear.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.sh  siyuan.json  super-productivity.json  tagspaces.json  test_complete_fix_demo.py  test_signature_verification.py  unit_mock.py  update_all.py
.cursor/rules/: comments.mdc  git-conventions.mdc  python-rule-project.mdc  python.mdc
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.tr.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-instructions.md.bak  copilot-test-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  dev.md  dev.yml  feat.yml  feature_request.md
.github/instructions/: comments.instructions.md  python.instructions.md  unit-and-integration-tests.instructions.md
.github/prompts/: adr.md
.github/workflows/: main.yml
apps/: appflowy.json  freetube.json  joplin.json  logseq.json  obsidian.json  qownnotes.json  siyuan.json  standardnotes.json  super-productivity.json  tagspaces.json  weektodo.json  zen-browser.json  zettlr.json
autocomplete/: README.md  bash_autocomplete  zsh_autocomplete
classes/: AppImageDownloader.py  FileHandler.py
cls/: AppImageDownloader.py  FileHandler.py  decorators.py
commands/: base.py  check_versions.py  command.py  create_app_config.py  create_global_config.py  customize_app_config.py  customize_global_config.py  download.py  invoker.py  manage_token.py  select_files.py  update_all.py  update_all_auto.py  update_base.py  update_single_app.py  verify.py
completions/: my-unicorn.fish
config_files_examples/: app.json  joplin.json  settings.json  siyuan.json  super-productivity.json
config_files_examples/apps/: AppFlowy.json  FreeTube.json  QOwnNotes.json  Zettlr.json  joplin.json  logseq.json  obsidian.json  siyuan.json  standardnotes.json  super-productivity.json  tagspaces.json  weektodo.json  zen-browser.json  zettlr.json
config_files_examples/other_settings/: batch_mode.json
container/: Dockerfile  Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  README.md  manage.sh  podman-compose.yml
docs/: ICON_TEMPLATE_EXAMPLES.md  api_structure_sequence.md  asset_filtering_logic.md  class_diagram.md  cli.md  config.md  developers.md  diagram.md  first_classes.md  limitations.md  my_unicorn_todo.org  new.md  other_classes.md  refactor.md  test.md  todo.md  ui.md  upgrade.md  uv.md  verification-refactoring.md  wiki.md
docs/adr/: ADR-001-CLI-Technical-Debt-Resolution.md  ADR-002-Core-Technical-Debt-Resolution.md  ADR-003-Config-Technical-Debt-Resolution.md  ADR-003-Project-Phoenix-Architecture.md  adr-0004-remove-all-command.md  adr-0005-required-progress-reporter.md  adr-0006-hardcode-console-log-level.md  adr-0007-integrity-checks-and-export-for-reinstallation.md  adr-0008-simplicity-first-cli-rewrite.md  di-improve.md
docs/architecture/: catalog-format.md  cli.md  configuration.md  examples.md  services.md  templates.md  testing.md  troubleshooting.md
docs/data/: raw_api_returned_data.json
docs/dev/: asset_filtering_logic.md  benchmark.md  dependency-injection-patterns.md  dependency-management.md  developers.md  testing.md  upgrade.md  uv.md
docs/example_app_state_configs/: digest_catalog.json  skipped_catalog.json  skipped_url.json
json_files/: joplin.json  siyuan.json  super-productivity.json
locales/: config.json
my_unicorn/: __init__.py  app_config.py  auth.py  auth_manager.py  backup.py  cache.py  catalog.py  config.py  config_migration.py  config_migrator.py  constants.py  desktop.py  desktop_entry.py  download.py  exceptions.py  file_handler.py  github_client.py  global_config.py  i18n.py  icon.py  icon_manager.py  install.py  logger.py  main.py  parser.py  progress.py  progress_manager.py  repo.py  secure_token.py  self_update.py  storage.py  update.py  upgrade.py  utils.py  verify.py
my_unicorn/api/: __init__.py  assets.py  github_api.py  release_description_fetcher.py  release_manager.py  release_processor.py  selector.py  sha_asset_finder.py  sha_manager.py
my_unicorn/apps/: appflowy.json  freetube.json  heroicgameslauncher.json  joplin.json  kdiskmark.json  obsidian.json  qownnotes.json
my_unicorn/catalog/: affine.json  anytype.json  appflowy.json  cherrytree.json  freecad.json  (+19 more)
scripts/: README.md  auto_update.bash  autocomplete.bash  copy-to-vm.sh  extract_changelog.sh  github_action_test.sh  manual_test.bash  migrate_catalogs_v2.py  test.bash  test.py  test_log_rotation.py  update.bash  venv-wrapper.bash  verify_yml.sh
src/: __init__.py  api.py  app_catalog.py  app_config.py  app_image_downloader.py  auth_manager.py  config.py  config_migrator.py  decorators.py  download.py  file_handler.py  global_config.py  i18n.py  icon_manager.py  input_handler.py  locale.py  logger.py  parser.py  progress_manager.py  secure_token.py  sha_download.py  update.py  utils.py  verify.py
tests/: README.md  conftest.py  mock_all.py  test_api.py  test_app_catalog.py  test_app_config.py  test_app_config_migration_icon.py  test_ascii_format.py  test_ascii_output.py  test_asset_filtering.py  test_auth.py  test_auth_manager.py  test_backup.py  test_backward_compat_app_state.py  test_backward_compatibility.py  test_cache.py  test_cli_version.py  test_command_download.py  test_command_update_all.py  test_config.py  test_config_migration.py  test_container.py  test_desktop.py  test_display_id.py  test_display_registry.py  test_download.py  test_download_retry.py  test_exceptions.py  test_file_handler.py  test_file_ops.py  test_github_action.py  test_github_action_ci.py  test_github_api.py  test_github_client.py  test_icon.py  test_icon_manager.py  test_install.py  test_install_state_checker.py  test_install_verification_failure.py  test_lines.py  (+28 more)
tools/: generate_pip_freeze.py
(+890 files in other folders)
